2009-05-22  Henrik Sandklef  <hesa@sandklef.com>

	* libxnee/src/print.c (xnee_print_xnee_settings): 
	Fixed ugly typo 

2009-05-20  Henrik Sandklef  <hesa@sandklef.com>

	* libxnee/src/print.c (xnee_print_xnee_settings): 
	Fixed seg fault on solaris, faulty if statement fixed

2009-05-09  Henrik Sandklef  <hesa@sandklef.com>

	* doc/xnee.texi (Top): 
	Moved Top node outside of ifinfo statment

	* doc/Makefile.am: 
	Falling back to one rule for ps and pdf 

2009-04-27  Henrik Sandklef  <hesa@sandklef.com>

	* libxnee/src/xnee_replay.c (xnee_setup_rep_recording): 
	(c) year updated		

	* configure.in: 
	Finally, Version set to 3.03

2009-04-22  Henrik Sandklef  <hesa@sandklef.com>

	* libxnee/src/print.c (xnee_version): 
	(c) years updated

	* cnee/src/cnee_printer.c: 
	Minor indentation fixes
	Removed unused variables

	* libxnee/src/xnee_session.c: 
	Type casting to int (to remove compiler warnings)
	(c) year updated	

	* libxnee/src/feedback.c: 
	(c) year updated	
	Fixed pedantic warnings (function pointer)
	
	* libxnee/src/xnee_alloc.c: 
	obsoleted function: xnee_reset_retype_info
	(c) year updated

	* libxnee/src/xnee_callback.c: 
	(c) year updated	
	Fixed pedantic warnings

	* libxnee/src/xnee_display.c: 
	Added missing return statement
	(c) year updated
	Type casting to int (to remove compiler warnings)

	* libxnee/src/xnee_expr.c: 
	Removed unused vars
	Chceking return value of system
	Safer pointer arithmetics when using stat. buffers
	(c) year updated

	* libxnee/src/xnee_range.c: 
	Better check for X.org server
	(c) year updated

	* libxnee/src/xnee_record.c: 
	Better screen nr handling 
	Removed dangerious call to XRecordFreeData

	* libxnee/src/xnee_resource.c: 
	Adding mode in call to xnee_set_plugin_name

	* libxnee/src/xnee_strings.c: 
	Added strings to handle name of 
	external dl-loaded funs

	* libxnee/src/xnee_utils.c: 
	Added verbose printout
	Setting variable leave to 0 on decl.

	* libxnee/src/xnee_window.c: 